--- a/src/style/index.css
+++ b/src/style/index.css
@@ -467,3 +467,47 @@ li {
   cursor: pointer;
   outline: none;
 }
+
+.results-body {
+  min-height: 450px;
+}
+
+.statistics-title {
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 20px;
+}
+
+.statistics-list__item {
+  margin-bottom: 15px;
+}
+
+.statistics-list__date,
+.statistics-list__count {
+  margin-right: 15px;
+  font-size: 18px;
+}
+
+.statistics-list__date {
+  display: inline-block;
+  width: 300px;
+  margin-right: 20px;
+}
+
+.statistics-list__count {
+  display: inline-block;
+  width: 33px;
+  padding: 5px;
+
+  border-radius: 5px;
+  color: white;
+  text-align: center;
+}
+
+.statistics-list__count--failed {
+  background-color: red;
+}
+
+.statistics-list__count--succeeded {
+  background-color: green;
+}
